[package]
name = "polarh10_hr_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.12.0"
futures = "0.3.32"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
uuid = "1.3"
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
